Adjust learning rate

--- a/INF8225_TP3_2025.ipynb
+++ b/INF8225_TP3_2025.ipynb
@@ -1738,7 +1738,7 @@
     "    # General parameters\n",
     "    'epochs': 5,\n",
     "    'batch_size': 128,\n",
-    "    'lr': 1e-3,\n",
+    "    'lr': 1e-4,\n",
     "    'betas': (0.9, 0.99),\n",
     "    'clip': 5,\n",
     "    'device': 'cuda' if torch.cuda.is_available() else 'cpu',\n",
@@ -1975,7 +1975,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -1989,10 +1989,46 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "training with: DyTBothAlpha=0.5\n",
+      "training with: DyTPreAlpha=0.05\n",
       "Starting training for 5 epochs, using cuda.\n",
       "starting epoch: 0\n",
+      "\n",
+      "Train -   loss: 3.20     top-1: 0.46    top-5: 0.65    top-10: 0.71\n",
+      "Eval -    loss: 3.13     top-1: 0.47    top-5: 0.65    top-10: 0.71\n",
+      "Tom doesn't often read books.\n",
+      "Tom n'a pas à Tom.\n",
+      "starting epoch: 1\n",
+      "\n",
+      "Train -   loss: 2.59     top-1: 0.53    top-5: 0.72    top-10: 0.78\n",
+      "Eval -    loss: 2.53     top-1: 0.53    top-5: 0.73    top-10: 0.78\n",
+      "We've got a visitor.\n",
+      "Nous avons une pause.\n",
+      "starting epoch: 2\n",
+      "\n",
+      "Train -   loss: 2.27     top-1: 0.56    top-5: 0.76    top-10: 0.82\n",
+      "Eval -    loss: 2.21     top-1: 0.57    top-5: 0.77    top-10: 0.82\n",
+      "I think this isn't correct.\n",
+      "Je ne pense pas que ce soit.\n",
+      "starting epoch: 3\n",
+      "\n",
+      "Train -   loss: 2.04     top-1: 0.60    top-5: 0.79    top-10: 0.84\n",
+      "Eval -    loss: 2.02     top-1: 0.60    top-5: 0.80    top-10: 0.84\n",
+      "You'd better do what Tom says.\n",
+      "Tu ferais mieux de ce que Tom.\n",
+      "starting epoch: 4\n",
       "\n"
+     ]
+    },
+    {
+     "ename": "KeyboardInterrupt",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[21], line 6\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mtraining with: \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mname\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m\"\u001b[39m)\n\u001b[1;32m      5\u001b[0m time1 \u001b[38;5;241m=\u001b[39m time\u001b[38;5;241m.\u001b[39mtime()\n\u001b[0;32m----> 6\u001b[0m \u001b[43mtrain_model\u001b[49m\u001b[43m(\u001b[49m\u001b[43mmodel\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mconfig\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mname\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m      7\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mtraining time: \u001b[39m\u001b[38;5;124m\"\u001b[39m, time\u001b[38;5;241m.\u001b[39mtime()\u001b[38;5;241m-\u001b[39mtime1)\n\u001b[1;32m      8\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m-\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;241m*\u001b[39m\u001b[38;5;241m25\u001b[39m)\n",
+      "Cell \u001b[0;32mIn[13], line 155\u001b[0m, in \u001b[0;36mtrain_model\u001b[0;34m(model, config, expname)\u001b[0m\n\u001b[1;32m    152\u001b[0m optimizer\u001b[38;5;241m.\u001b[39mstep()\n\u001b[1;32m    154\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m name, value \u001b[38;5;129;01min\u001b[39;00m metrics\u001b[38;5;241m.\u001b[39mitems():\n\u001b[0;32m--> 155\u001b[0m     logs[name]\u001b[38;5;241m.\u001b[39mappend(\u001b[43mvalue\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mcpu\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\u001b[38;5;241m.\u001b[39mitem())  \u001b[38;5;66;03m# Don't forget the '.item' to free the cuda memory\u001b[39;00m\n\u001b[1;32m    157\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m batch_id \u001b[38;5;241m%\u001b[39m config[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mlog_every\u001b[39m\u001b[38;5;124m'\u001b[39m] \u001b[38;5;241m==\u001b[39m \u001b[38;5;241m0\u001b[39m:\n\u001b[1;32m    158\u001b[0m     \u001b[38;5;28;01mfor\u001b[39;00m name, value \u001b[38;5;129;01min\u001b[39;00m logs\u001b[38;5;241m.\u001b[39mitems():\n",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
      ]
     }
    ],
