--- a/analysis_gaetan.ipynb
+++ b/analysis_gaetan.ipynb
@@ -123,7 +123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -227,7 +227,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -239,7 +239,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -269,7 +269,7 @@
        "       dtype=object))"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -294,7 +294,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -315,7 +315,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -383,7 +383,7 @@
        "      <td>0.37</td>\n",
        "      <td>0.57</td>\n",
        "      <td>0.64</td>\n",
-       "      <td>{'normffpost.weight': [0.018194695934653282, 0...</td>\n",
+       "      <td>{'selfattn.Wk.weight': [0.09236272424459457, 0...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>54</th>\n",
@@ -406,7 +406,7 @@
        "      <td>0.07</td>\n",
        "      <td>0.25</td>\n",
        "      <td>0.35</td>\n",
-       "      <td>{'normffpost.weight': [2.7113420880074115e-15,...</td>\n",
+       "      <td>{'selfattn.Wk.weight': [5.628180562947143e-17,...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>59</th>\n",
@@ -429,7 +429,7 @@
        "      <td>0.44</td>\n",
        "      <td>0.62</td>\n",
        "      <td>0.68</td>\n",
-       "      <td>{'normffpost.weight': [0.008721855469048023, 0...</td>\n",
+       "      <td>{'selfattn.Wk.weight': [0.22348374128341675, 0...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>64</th>\n",
@@ -452,7 +452,7 @@
        "      <td>0.03</td>\n",
        "      <td>0.07</td>\n",
        "      <td>0.12</td>\n",
-       "      <td>{'normffpost.weight': [3.765547435698852e-16, ...</td>\n",
+       "      <td>{'selfattn.Wk.weight': [2.902717059280463e-17,...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>69</th>\n",
@@ -475,7 +475,7 @@
        "      <td>0.43</td>\n",
        "      <td>0.63</td>\n",
        "      <td>0.69</td>\n",
-       "      <td>{'normffpost.weight': [0.005625380203127861, 0...</td>\n",
+       "      <td>{'selfattn.Wk.weight': [0.13845059275627136, 0...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>74</th>\n",
@@ -498,7 +498,7 @@
        "      <td>0.03</td>\n",
        "      <td>0.07</td>\n",
        "      <td>0.12</td>\n",
-       "      <td>{'normffpost.weight': [3.138201747737815e-16, ...</td>\n",
+       "      <td>{'selfattn.Wk.weight': [3.291461176061599e-17,...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>209</th>\n",
@@ -521,7 +521,7 @@
        "      <td>0.57</td>\n",
        "      <td>0.75</td>\n",
        "      <td>0.80</td>\n",
-       "      <td>{'normffpost.weight': [0.01834114082157612, 0....</td>\n",
+       "      <td>{'selfattn.Wk.weight': [0.08630690723657608, 0...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>214</th>\n",
@@ -544,7 +544,7 @@
        "      <td>0.59</td>\n",
        "      <td>0.77</td>\n",
        "      <td>0.82</td>\n",
-       "      <td>{'normffpost.weight': [0.024726219475269318, 0...</td>\n",
+       "      <td>{'selfattn.Wk.weight': [0.07703986763954163, 0...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>219</th>\n",
@@ -567,7 +567,7 @@
        "      <td>0.59</td>\n",
        "      <td>0.77</td>\n",
        "      <td>0.82</td>\n",
-       "      <td>{'normffpost.weight': [0.019075393676757812, 0...</td>\n",
+       "      <td>{'selfattn.Wk.weight': [0.07549378275871277, 0...</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -630,18 +630,18 @@
        "219         0.77          0.81        0.59        0.77         0.82   \n",
        "\n",
        "                                                 grads  \n",
-       "49   {'normffpost.weight': [0.018194695934653282, 0...  \n",
-       "54   {'normffpost.weight': [2.7113420880074115e-15,...  \n",
-       "59   {'normffpost.weight': [0.008721855469048023, 0...  \n",
-       "64   {'normffpost.weight': [3.765547435698852e-16, ...  \n",
-       "69   {'normffpost.weight': [0.005625380203127861, 0...  \n",
-       "74   {'normffpost.weight': [3.138201747737815e-16, ...  \n",
-       "209  {'normffpost.weight': [0.01834114082157612, 0....  \n",
-       "214  {'normffpost.weight': [0.024726219475269318, 0...  \n",
-       "219  {'normffpost.weight': [0.019075393676757812, 0...  "
+       "49   {'selfattn.Wk.weight': [0.09236272424459457, 0...  \n",
+       "54   {'selfattn.Wk.weight': [5.628180562947143e-17,...  \n",
+       "59   {'selfattn.Wk.weight': [0.22348374128341675, 0...  \n",
+       "64   {'selfattn.Wk.weight': [2.902717059280463e-17,...  \n",
+       "69   {'selfattn.Wk.weight': [0.13845059275627136, 0...  \n",
+       "74   {'selfattn.Wk.weight': [3.291461176061599e-17,...  \n",
+       "209  {'selfattn.Wk.weight': [0.08630690723657608, 0...  \n",
+       "214  {'selfattn.Wk.weight': [0.07703986763954163, 0...  \n",
+       "219  {'selfattn.Wk.weight': [0.07549378275871277, 0...  "
       ]
      },
-     "execution_count": 12,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -652,7 +652,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -720,7 +720,7 @@
        "      <td>0.65</td>\n",
        "      <td>0.84</td>\n",
        "      <td>0.88</td>\n",
-       "      <td>{'normffpre.norm.bias': [0.006446627900004387,...</td>\n",
+       "      <td>{'ff2.bias': [0.012475991621613503, 0.01247599...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>79</th>\n",
@@ -743,7 +743,7 @@
        "      <td>0.64</td>\n",
        "      <td>0.83</td>\n",
        "      <td>0.87</td>\n",
-       "      <td>{'crossattn.Wq.weight': [0.1223616898059845, 0...</td>\n",
+       "      <td>{'selfattn.Wk.weight': [0.0217001810669899, 0....</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>109</th>\n",
@@ -789,7 +789,7 @@
        "      <td>0.65</td>\n",
        "      <td>0.84</td>\n",
        "      <td>0.88</td>\n",
-       "      <td>{'ff2.bias': [0.03647897392511368, 0.028255993...</td>\n",
+       "      <td>{'normselfattnpre.weight': [0.0167307406663894...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>139</th>\n",
@@ -848,14 +848,14 @@
        "139          0.88        0.65        0.84         0.88   \n",
        "\n",
        "                                                 grads  \n",
-       "14   {'normffpre.norm.bias': [0.006446627900004387,...  \n",
-       "79   {'crossattn.Wq.weight': [0.1223616898059845, 0...  \n",
+       "14   {'ff2.bias': [0.012475991621613503, 0.01247599...  \n",
+       "79   {'selfattn.Wk.weight': [0.0217001810669899, 0....  \n",
        "109  {'ff2.bias': [0.04844382032752037, 0.042340103...  \n",
-       "124  {'ff2.bias': [0.03647897392511368, 0.028255993...  \n",
+       "124  {'normselfattnpre.weight': [0.0167307406663894...  \n",
        "139  {'ff2.bias': [0.036276981234550476, 0.02746333...  "
       ]
      },
-     "execution_count": 13,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -866,14 +866,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_14848/2145597980.py:1: FutureWarning: The provided callable <function min at 0x764602895ee0> is currently using SeriesGroupBy.min. In a future version of pandas, the provided callable will be used directly. To keep current behavior pass the string \"min\" instead.\n",
+      "/tmp/ipykernel_15929/2145597980.py:1: FutureWarning: The provided callable <function min at 0x769110502fc0> is currently using SeriesGroupBy.min. In a future version of pandas, the provided callable will be used directly. To keep current behavior pass the string \"min\" instead.\n",
       "  df.query(\"Epoch==4 & exp_group==1\").groupby([\"Layer\", \"Position\"]).agg({\"Eval Loss\": np.min})\n"
      ]
     },
@@ -987,7 +987,7 @@
        "          Pre            1.70"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
