--- a/analysis_gaetan.ipynb
+++ b/analysis_gaetan.ipynb
@@ -185,6 +185,74 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "gt = {'BatchNormBoth',\n",
+    " 'BatchNormPost',\n",
+    " 'BatchNormPre',\n",
+    " 'DyTBoth',\n",
+    " 'DyTBothAlpha=0.05',\n",
+    " 'DyTBothHardtanh',\n",
+    " 'DyTBothHardtanhAlpha=0.05',\n",
+    " 'DyTBothLeakyHardtanh',\n",
+    " 'DyTBothLeakyHardtanhAlpha=0.05',\n",
+    " 'DyTPost',\n",
+    " 'DyTPostAlpha=0.05',\n",
+    " 'DyTPostHardtanh',\n",
+    " 'DyTPostHardtanhAlpha=0.05',\n",
+    " 'DyTPostLeakyHardtanh',\n",
+    " 'DyTPostLeakyHardtanhAlpha=0.05',\n",
+    " 'DyTPre',\n",
+    " 'DyTPreAlpha=0.05',\n",
+    " 'DyTPreHardtanh',\n",
+    " 'DyTPreHardtanhAlpha=0.05',\n",
+    " 'DyTPreLeakyHardtanh',\n",
+    " 'DyTPreLeakyHardtanhAlpha=0.05',\n",
+    " 'Identity',\n",
+    " 'LayernormBoth',\n",
+    " 'LayernormPost',\n",
+    " 'LayernormPre',\n",
+    " 'RMSNormBoth',\n",
+    " 'RMSNormPost',\n",
+    " 'RMSNormPre',\n",
+    " '2-DyTPost-lr=0.0002',\n",
+    " '2-DyTPost-lr=0.0004',\n",
+    " '2-DyTPost-lr=2.5e-05',\n",
+    " '2-DyTPost-lr=5e-05',\n",
+    " '2-LayernormPost-lr=0.0002',\n",
+    " '2-LayernormPost-lr=0.0004',\n",
+    " '2-LayernormPost-lr=2.5e-05',\n",
+    " '2-LayernormPost-lr=5e-05',\n",
+    " '2-DyTPostHardtanhAlpha=0.5-dim_hidden=512',\n",
+    " '2-DyTPostAlpha=0.5-dim_hidden=512',\n",
+    " '2-DyTPreAlpha=1.0',\n",
+    " '2-DyTPreHardtanhAlpha=1.0',\n",
+    " '2-DyTPreLeakyHardtanhAlpha=1.0',\n",
+    " '3-DyTPostAlpha=1.0',\n",
+    " '3-DyTPostHardtanhAlpha=1.0',\n",
+    " '3-DyTPostLeakyHardtanhAlpha=1.0',\n",
+    " '3-DyTPre-lr=0.0002',\n",
+    " '3-DyTPre-lr=0.0004',\n",
+    " '3-DyTPre-lr=2.5e-05',\n",
+    " '3-DyTPre-lr=5e-05',\n",
+    " '3-DyTPreAlpha-dim_hidden=512',\n",
+    " '3-DyTPreHardtanhAlpha-dim_hidden=512',\n",
+    " '3-DyTPreLeakyHardtanhAlpha-dim_hidden=512',\n",
+    " '3-LayernormPre-lr=0.0002',\n",
+    " '3-LayernormPre-lr=0.0004',\n",
+    " '3-LayernormPre-lr=2.5e-05',\n",
+    " '3-LayernormPre-lr=5e-05',\n",
+    " '2-DyTPostLeakyHardtanhAlpha=0.5-dim_hidden=512'}\n",
+    "seen = set([e.name for e in pathlib.Path(\"logs\").glob(\"*\") if e.is_dir()])\n",
+    "\n",
+    "assert len(seen.difference(gt))==0, f\"Extra folders found:{seen.difference(gt)}\"\n",
+    "assert len(gt.difference(seen))==0, f\"Missing folders: {seen.difference(gt)}\""
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
    "outputs": [],
@@ -995,20 +1063,6 @@
    "source": [
     "df.query(\"Epoch==4 & exp_group==1\").groupby([\"Layer\", \"Position\"]).agg({\"Eval Loss\": np.min})"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
