--- a/analysis_gaetan.ipynb
+++ b/analysis_gaetan.ipynb
@@ -185,9 +185,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 19,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "AssertionError",
+     "evalue": "Extra folders found:{'BatchNormPre-2'}, Missing folders: {'BatchNormPre'}",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mAssertionError\u001b[39m                            Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[19]\u001b[39m\u001b[32m, line 59\u001b[39m\n\u001b[32m      1\u001b[39m gt = {\u001b[33m'\u001b[39m\u001b[33mBatchNormBoth\u001b[39m\u001b[33m'\u001b[39m,\n\u001b[32m      2\u001b[39m  \u001b[33m'\u001b[39m\u001b[33mBatchNormPost\u001b[39m\u001b[33m'\u001b[39m,\n\u001b[32m      3\u001b[39m  \u001b[33m'\u001b[39m\u001b[33mBatchNormPre\u001b[39m\u001b[33m'\u001b[39m,\n\u001b[32m   (...)\u001b[39m\u001b[32m     55\u001b[39m  \u001b[33m'\u001b[39m\u001b[33m3-LayernormPre-lr=5e-05\u001b[39m\u001b[33m'\u001b[39m,\n\u001b[32m     56\u001b[39m  \u001b[33m'\u001b[39m\u001b[33m2-DyTPostLeakyHardtanhAlpha=0.5-dim_hidden=512\u001b[39m\u001b[33m'\u001b[39m}\n\u001b[32m     57\u001b[39m seen = \u001b[38;5;28mset\u001b[39m([e.name \u001b[38;5;28;01mfor\u001b[39;00m e \u001b[38;5;129;01min\u001b[39;00m pathlib.Path(\u001b[33m\"\u001b[39m\u001b[33mlogs\u001b[39m\u001b[33m\"\u001b[39m).glob(\u001b[33m\"\u001b[39m\u001b[33m*\u001b[39m\u001b[33m\"\u001b[39m) \u001b[38;5;28;01mif\u001b[39;00m e.is_dir()])\n\u001b[32m---> \u001b[39m\u001b[32m59\u001b[39m \u001b[38;5;28;01massert\u001b[39;00m \u001b[38;5;28mlen\u001b[39m(seen.difference(gt))==\u001b[32m0\u001b[39m \u001b[38;5;129;01mand\u001b[39;00m \u001b[38;5;28mlen\u001b[39m(gt.difference(seen))==\u001b[32m0\u001b[39m, \u001b[33mf\u001b[39m\u001b[33m\"\u001b[39m\u001b[33mExtra folders found:\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mseen.difference(gt)\u001b[38;5;132;01m}\u001b[39;00m\u001b[33m, Missing folders: \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mgt.difference(seen)\u001b[38;5;132;01m}\u001b[39;00m\u001b[33m\"\u001b[39m\n",
+      "\u001b[31mAssertionError\u001b[39m: Extra folders found:{'BatchNormPre-2'}, Missing folders: {'BatchNormPre'}"
+     ]
+    }
+   ],
    "source": [
     "gt = {'BatchNormBoth',\n",
     " 'BatchNormPost',\n",
@@ -247,8 +259,7 @@
     " '2-DyTPostLeakyHardtanhAlpha=0.5-dim_hidden=512'}\n",
     "seen = set([e.name for e in pathlib.Path(\"logs\").glob(\"*\") if e.is_dir()])\n",
     "\n",
-    "assert len(seen.difference(gt))==0, f\"Extra folders found:{seen.difference(gt)}\"\n",
-    "assert len(gt.difference(seen))==0, f\"Missing folders: {seen.difference(gt)}\""
+    "assert len(seen.difference(gt))==0 and len(gt.difference(seen))==0, f\"Extra folders found:{seen.difference(gt)}, Missing folders: {gt.difference(seen)}\""
    ]
   },
   {
