--- a/analysis_gaetan.ipynb
+++ b/analysis_gaetan.ipynb
@@ -249,9 +249,9 @@
     " '3-DyTPre-lr=0.0004',\n",
     " '3-DyTPre-lr=2.5e-05',\n",
     " '3-DyTPre-lr=5e-05',\n",
-    " '3-DyTPreAlpha-dim_hidden=512',\n",
-    " '3-DyTPreHardtanhAlpha-dim_hidden=512',\n",
-    " '3-DyTPreLeakyHardtanhAlpha-dim_hidden=512',\n",
+    " '3-DyTPre-dim_hidden=512',\n",
+    " '3-DyTPreHardtanh-dim_hidden=512',\n",
+    " '3-DyTPreLeakyHardtanh-dim_hidden=512',\n",
     " '3-LayernormPre-lr=0.0002',\n",
     " '3-LayernormPre-lr=0.0004',\n",
     " '3-LayernormPre-lr=2.5e-05',\n",
@@ -455,7 +455,7 @@
        "      <td>0.37</td>\n",
        "      <td>0.57</td>\n",
        "      <td>0.64</td>\n",
-       "      <td>{'normcrossattnpost.bias': [0.0930789113044738...</td>\n",
+       "      <td>{'ff1.weight': [0.12084052711725235, 0.1629686...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>49</th>\n",
@@ -478,7 +478,7 @@
        "      <td>0.07</td>\n",
        "      <td>0.25</td>\n",
        "      <td>0.35</td>\n",
-       "      <td>{'normcrossattnpost.bias': [4.97930317041196e-...</td>\n",
+       "      <td>{'ff1.weight': [1.1524333868922695e-14, 8.2218...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>54</th>\n",
@@ -501,7 +501,7 @@
        "      <td>0.44</td>\n",
        "      <td>0.62</td>\n",
        "      <td>0.68</td>\n",
-       "      <td>{'normcrossattnpost.bias': [0.0492524914443492...</td>\n",
+       "      <td>{'ff1.weight': [0.10403416305780411, 0.0400905...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>59</th>\n",
@@ -524,7 +524,7 @@
        "      <td>0.03</td>\n",
        "      <td>0.07</td>\n",
        "      <td>0.12</td>\n",
-       "      <td>{'normcrossattnpost.bias': [8.743287533861596e...</td>\n",
+       "      <td>{'ff1.weight': [1.3025981829902378e-15, 7.7907...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>64</th>\n",
@@ -547,7 +547,7 @@
        "      <td>0.43</td>\n",
        "      <td>0.63</td>\n",
        "      <td>0.69</td>\n",
-       "      <td>{'normcrossattnpost.bias': [0.0160439629107713...</td>\n",
+       "      <td>{'ff1.weight': [0.06191615015268326, 0.0295933...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>69</th>\n",
@@ -570,7 +570,7 @@
        "      <td>0.03</td>\n",
        "      <td>0.07</td>\n",
        "      <td>0.12</td>\n",
-       "      <td>{'normcrossattnpost.bias': [7.094855539386321e...</td>\n",
+       "      <td>{'ff1.weight': [1.3572990413283285e-15, 8.9506...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>204</th>\n",
@@ -593,7 +593,7 @@
        "      <td>0.57</td>\n",
        "      <td>0.75</td>\n",
        "      <td>0.80</td>\n",
-       "      <td>{'normcrossattnpost.bias': [0.0626504793763160...</td>\n",
+       "      <td>{'ff1.weight': [0.18498332798480988, 0.1643381...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>209</th>\n",
@@ -616,7 +616,7 @@
        "      <td>0.59</td>\n",
        "      <td>0.77</td>\n",
        "      <td>0.82</td>\n",
-       "      <td>{'normcrossattnpost.bias': [0.0654800087213516...</td>\n",
+       "      <td>{'ff1.weight': [0.238520547747612, 0.232768207...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>214</th>\n",
@@ -639,7 +639,7 @@
        "      <td>0.59</td>\n",
        "      <td>0.77</td>\n",
        "      <td>0.82</td>\n",
-       "      <td>{'normcrossattnpost.bias': [0.0413478538393974...</td>\n",
+       "      <td>{'ff1.weight': [0.22508977353572845, 0.1960925...</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -702,15 +702,15 @@
        "214         0.77          0.81        0.59        0.77         0.82   \n",
        "\n",
        "                                                 grads  \n",
-       "44   {'normcrossattnpost.bias': [0.0930789113044738...  \n",
-       "49   {'normcrossattnpost.bias': [4.97930317041196e-...  \n",
-       "54   {'normcrossattnpost.bias': [0.0492524914443492...  \n",
-       "59   {'normcrossattnpost.bias': [8.743287533861596e...  \n",
-       "64   {'normcrossattnpost.bias': [0.0160439629107713...  \n",
-       "69   {'normcrossattnpost.bias': [7.094855539386321e...  \n",
-       "204  {'normcrossattnpost.bias': [0.0626504793763160...  \n",
-       "209  {'normcrossattnpost.bias': [0.0654800087213516...  \n",
-       "214  {'normcrossattnpost.bias': [0.0413478538393974...  "
+       "44   {'ff1.weight': [0.12084052711725235, 0.1629686...  \n",
+       "49   {'ff1.weight': [1.1524333868922695e-14, 8.2218...  \n",
+       "54   {'ff1.weight': [0.10403416305780411, 0.0400905...  \n",
+       "59   {'ff1.weight': [1.3025981829902378e-15, 7.7907...  \n",
+       "64   {'ff1.weight': [0.06191615015268326, 0.0295933...  \n",
+       "69   {'ff1.weight': [1.3572990413283285e-15, 8.9506...  \n",
+       "204  {'ff1.weight': [0.18498332798480988, 0.1643381...  \n",
+       "209  {'ff1.weight': [0.238520547747612, 0.232768207...  \n",
+       "214  {'ff1.weight': [0.22508977353572845, 0.1960925...  "
       ]
      },
      "execution_count": 12,
@@ -772,7 +772,7 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>279</th>\n",
+       "      <th>264</th>\n",
        "      <td>BatchNorm</td>\n",
        "      <td>Pre</td>\n",
        "      <td>4</td>\n",
@@ -792,7 +792,7 @@
        "      <td>0.65</td>\n",
        "      <td>0.84</td>\n",
        "      <td>0.88</td>\n",
-       "      <td>{'crossattn.Wq.weight': [0.15375857055187225, ...</td>\n",
+       "      <td>{'normselfattnpre.norm.bias': [0.0146365677937...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>74</th>\n",
@@ -815,7 +815,7 @@
        "      <td>0.64</td>\n",
        "      <td>0.83</td>\n",
        "      <td>0.87</td>\n",
-       "      <td>{'normffpre.bias': [0.023237938061356544, 0.02...</td>\n",
+       "      <td>{'ff1.weight': [0.16243939101696014, 0.1475568...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>104</th>\n",
@@ -861,7 +861,7 @@
        "      <td>0.65</td>\n",
        "      <td>0.84</td>\n",
        "      <td>0.88</td>\n",
-       "      <td>{'crossattn.Wq.weight': [0.1713174730539322, 0...</td>\n",
+       "      <td>{'normffpre.weight': [0.013368120416998863, 0....</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>134</th>\n",
@@ -884,7 +884,7 @@
        "      <td>0.65</td>\n",
        "      <td>0.84</td>\n",
        "      <td>0.88</td>\n",
-       "      <td>{'crossattn.Wq.weight': [0.1704608052968979, 0...</td>\n",
+       "      <td>{'normcrossattnpre.scale': [0.0110928174108266...</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -892,39 +892,39 @@
       ],
       "text/plain": [
        "         Layer Position  Epoch  Train Loss  Eval Loss  Alpha DyTfn  exp_group  \\\n",
-       "279  BatchNorm      Pre      4        1.70       1.69    NaN  None          1   \n",
+       "264  BatchNorm      Pre      4        1.70       1.69    NaN  None          1   \n",
        "74         DyT      Pre      4        1.78       1.78    0.5  Tanh          1   \n",
        "104   Identity     Both      4        1.74       1.71    NaN  None          1   \n",
        "119  Layernorm      Pre      4        1.71       1.70    NaN  None          1   \n",
        "134    RMSNorm      Pre      4        1.71       1.70    NaN  None          1   \n",
        "\n",
        "         lr  dim_hidden Exp_full_name            Ground Truth  \\\n",
-       "279  0.0001       256.0  BatchNormPre  We're not really sure.   \n",
+       "264  0.0001       256.0  BatchNormPre  We're not really sure.   \n",
        "74   0.0001       256.0        DyTPre  We're not really sure.   \n",
        "104  0.0001       256.0      Identity  We're not really sure.   \n",
        "119  0.0001       256.0  LayernormPre  We're not really sure.   \n",
        "134  0.0001       256.0    RMSNormPre  We're not really sure.   \n",
        "\n",
        "                                Prediction  Train Top-1  Train Top-5  \\\n",
-       "279      Nous ne sommes pas vraiment sûre.         0.65         0.84   \n",
+       "264      Nous ne sommes pas vraiment sûre.         0.65         0.84   \n",
        "74   Nous ne sommes pas vraiment vraiment.         0.64         0.83   \n",
        "104      Nous ne sommes pas vraiment sûre.         0.64         0.83   \n",
        "119     Nous ne sommes pas vraiment sûres.         0.65         0.84   \n",
        "134     Nous ne sommes pas vraiment sûres.         0.65         0.84   \n",
        "\n",
        "     Train Top-10  Eval Top-1  Eval Top-5  Eval Top-10  \\\n",
-       "279          0.88        0.65        0.84         0.88   \n",
+       "264          0.88        0.65        0.84         0.88   \n",
        "74           0.87        0.64        0.83         0.87   \n",
        "104          0.87        0.65        0.84         0.87   \n",
        "119          0.88        0.65        0.84         0.88   \n",
        "134          0.88        0.65        0.84         0.88   \n",
        "\n",
        "                                                 grads  \n",
-       "279  {'crossattn.Wq.weight': [0.15375857055187225, ...  \n",
-       "74   {'normffpre.bias': [0.023237938061356544, 0.02...  \n",
+       "264  {'normselfattnpre.norm.bias': [0.0146365677937...  \n",
+       "74   {'ff1.weight': [0.16243939101696014, 0.1475568...  \n",
        "104  {'crossattn.Wq.weight': [0.15474657714366913, ...  \n",
-       "119  {'crossattn.Wq.weight': [0.1713174730539322, 0...  \n",
-       "134  {'crossattn.Wq.weight': [0.1704608052968979, 0...  "
+       "119  {'normffpre.weight': [0.013368120416998863, 0....  \n",
+       "134  {'normcrossattnpre.scale': [0.0110928174108266...  "
       ]
      },
      "execution_count": 13,
@@ -945,7 +945,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_24878/2145597980.py:1: FutureWarning: The provided callable <function min at 0x7ebe0030efc0> is currently using SeriesGroupBy.min. In a future version of pandas, the provided callable will be used directly. To keep current behavior pass the string \"min\" instead.\n",
+      "/tmp/ipykernel_24416/2145597980.py:1: FutureWarning: The provided callable <function min at 0x75f88c102fc0> is currently using SeriesGroupBy.min. In a future version of pandas, the provided callable will be used directly. To keep current behavior pass the string \"min\" instead.\n",
       "  df.query(\"Epoch==4 & exp_group==1\").groupby([\"Layer\", \"Position\"]).agg({\"Eval Loss\": np.min})\n"
      ]
     },
